--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@
 &lt;a href="https://www.mozilla.org/en-US/"&gt;the Mozilla homepage&lt;/a&gt;.
 &lt;/p&gt;</code></pre>
                 <p>This gives us the following result:</p>
-                <p>I'm creating a link to <a href="https://www.mozilla.org/en-US/">the Mozilla homepage.</a></p>
+                <p>I'm creating a link to <a href="https://www.mozilla.org/en-US/" target="_blank">the Mozilla
+                            homepage.</a></p>
             </section>
             <section class="main-section" id="Lists">
                 <header>
@@ -398,12 +399,13 @@ The school is on your right, 300 meters up the road</code></pre>
                 <header>
                     <h1>Next Steps</h1>
                 </header>
-                <p>The information in this documentation just scratches the surface of what you are able to do with HTML, for example, you are able to create <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms">forms</a> and <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables">tables</a>,
-                    you can also <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Other_embedding_technologies">embed
-                            videos</a> from other websites. There are many <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">HTML elements</a> that you will use for various web development projects as well as <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes">attributes</a>                    which add additional value that configure the elements or change the behaviour in various ways. When you have comfortably learnt <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML#guides">HTML</a>, you
-                    can continue to learn
-                    <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps">CSS</a> to add styles to the website and <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps">JavaScript</a> to add scripting, together
-                    these three come together to build a basic and beautiful website. </p>
+                <p>The information in this documentation just scratches the surface of what you are able to do with HTML, for example, you are able to create <a href="https://developer.mozilla.org/en-US/docs/Learn/Forms" target="_blank">forms</a> and
+                    <a
+                        href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables" target="_blank">tables</a>, you can also <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Other_embedding_technologies" target="_blank">embed
+                            videos</a> from other websites. There are many <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element" target="_blank">HTML
+                            elements</a> that you will use for various web development projects as well as <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes" target="_blank">attributes</a> which add additional value that configure
+                        the elements or change the behaviour in various ways. When you have comfortably learnt <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML#guides" target="_blank">HTML</a>, you can continue to learn
+                        <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS/First_steps" target="_blank">CSS</a> to add styles to the website and <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps" target="_blank">JavaScript</a>                        to add scripting, together these three come together to build a basic and beautiful website. </p>
             </section>
             <section class="main-section" id="References">
                 <header>
